# zen-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  html.html  rustfmt.toml  todo.md
src/: aspects.rs  components.rs  dynamic_stack.rs  layouts.rs  lib.rs
src/aspects/: border.rs  color.rs  font.rs  order.rs  spaceing.rs  svg.rs
src/components/: box.rs  container.rs  icon.rs  text.rs
src/components/container/: stack.rs
src/components/icon/: github.rs
src/components/text/: h.rs
src/layouts/: html.rs
src/layouts/html/: box.rs  container.rs  icon.rs  text.rs
tests/: html.rs
