[package]
name = "zen-rs"
version = "0.1.3"
edition = "2021"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
license = "MIT"
description = "A library for generating non-interactive content like cards or files."
readme = "README.md"
repository = "https://github.com/TOwInOK/zen-rs"
homepage = "https://github.com/TOwInOK/zen-rs"
documentation = "https://docs.rs/zen-rs"
keywords = ["non-interactive", "rendering", "HTML", "SVG", "PDF"]
categories = ["rendering", "web-programming", "text-processing", "template-engine"]

[dependencies]
paste = "1.0.15"
skia-safe = "0.80.1"
