[package]
name = "zen-rs"
version = "0.1.5"
edition = "2021"
authors = ["TOwInOK <60252419+TOwInOK@users.noreply.github.com>"]
license = "MIT"
description = "A library for generating non-interactive content like cards or files."
readme = "README.md"
repository = "https://github.com/TOwInOK/zen-rs"
homepage = "https://github.com/TOwInOK/zen-rs"
documentation = "https://docs.rs/zen-rs"
keywords = ["non-interactive", "rendering", "HTML", "SVG", "PDF"]
categories = ["rendering", "web-programming", "text-processing", "template-engine"]

[dependencies]
paste = "1.0.15"
skia-safe = "0.80.1"


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
